<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/filters"
        android:icon="@drawable/ic_filter"
        android:title="@string/filters"
        app:showAsAction="always">

            <menu>
                <item android:title="@string/by_type" android:id="@+id/filters_type">
                    <menu></menu>
                </item>
                <item android:title="@string/by_cost" android:id="@+id/filters_cost">
                    <menu></menu>
                </item>
            </menu>

    </item>

</menu>
