<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.fiapfood.fragments.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/restaurant_s_name"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textCapWords" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/btnTakePicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:borderlessButtonStyle"
                        android:layout_gravity="center"
                        android:src="@android:drawable/ic_menu_camera" />

                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/restaurant_s_phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spinner_bottom_margin"
                android:layout_gravity="center_horizontal"
                android:entries="@array/restaurant_types"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/restaurant_costs"
                android:spinnerMode="dropdown" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/restaurant_s_notes__optional_"
                    android:inputType="textMultiLine|textCapSentences"
                    android:ems="10"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/buttton_top_margin"
                android:text="@string/save"
                android:background="@color/colorButtonSave"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRemove"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/buttton_top_margin"
                android:text="@string/remove"
                android:background="@color/colorButtonRemove"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
